--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-server": "^17.1.0",
     "@angular/router": "^17.1.0",
     "@angular/ssr": "^17.1.2",
+    "@brenoroosevelt/toast": "^2.0.3",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "swiper": "^11.0.6",
